crates/parser/tests/snapshots/file_empty.snap
---
source: crates/parser/tests/snapshots.rs
---
# file-empty

## Input

```

```

## CST

```
SOURCE_FILE@0..0
```

## AST

```
SourceFile {
    shebang: none,
    items: [],
}
```

vim:ft=markdown
