crates/parser/tests/snapshots/file_newline.snap
---
source: crates/parser/tests/snapshots.rs
---
# file-newline

## Input

```


```

## CST

```
SOURCE_FILE@0..1
  NEWLINE@0..1 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [],
}
```

vim:ft=markdown
